--- a/index.html
+++ b/index.html
@@ -149,34 +149,55 @@
             />
           </svg>
           <!-- KORPA -->
-          <div
-            class="
-              cart-icon
-              h-10
-              w-10
-              bg-yellow-500
-              flex
-              items-center
-              justify-center
-              rounded-xl
-              text-sm
-            "
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4 text-gray-600"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
+          <a href="cart.html" target="_self">
+            <div
+              class="
+                cart-icon
+                relative
+                h-10
+                w-10
+                bg-yellow-500
+                flex
+                items-center
+                justify-center
+                rounded-xl
+                text-sm
+              "
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
-              />
-            </svg>
-          </div>
+              <div
+                class="
+                  cart-item-number
+                  absolute
+                  -top-1
+                  right-0
+                  h-4
+                  w-4
+                  bg-white
+                  rounded-full
+                  flex
+                  justify-center
+                  items-center
+                  text-gray-600 text-xs
+                "
+              >
+                2
+              </div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-4 w-4 text-gray-600"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                />
+              </svg>
+            </div>
+          </a>
           <!--ZVONCE-->
           <svg
             xmlns="http://www.w3.org/2000/svg"
