ADD: Some simple functionality
Getting and showing items from db

--- a/cart.html
+++ b/cart.html
@@ -162,8 +162,27 @@
               justify-center
               rounded-xl
               text-sm
+              relative
             "
           >
+            <div
+              class="
+                cart-item-number
+                absolute
+                -top-1
+                right-0
+                h-4
+                w-4
+                bg-white
+                rounded-full
+                flex
+                justify-center
+                items-center
+                text-gray-600 text-xs
+              "
+            >
+              2
+            </div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-4 w-4 text-gray-600"
