--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/"
       crossorigin="anonymous"
     ></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
+    <script src="./firebase.js"></script>
+    <script src="./script.js"></script>
     <title>Dzela's Web Shop 🛒</title>
   </head>
   <body>
@@ -656,114 +662,13 @@
               </div>
             </div>
           </div>
-          <div class="main-section-deals">
-            <h1 class="text-2xl font-bold text-gray-700 mb-5 mt-5">
+          <div class="main-section-deals mt-5">
+            <h1 class="text-2xl font-bold text-gray-700 mb-5">
               Dobre ponude 🔥
             </h1>
-            <div class="main-section-products mt-5 flex items-center">
-              <div class="main-product flex flex-col items-center">
-                <div class="product-image w-48 h-52 bg-white rounded-lg p-4">
-                  <img
-                    class="w-full h-full object-contain"
-                    src="https://gamecentarrs.b-cdn.net/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/7/3/7309-konzola-nintendo-switch-blu-red-joycon-cena-prodaja-srbija-novo.jpg"
-                    alt="Nintendo switch"
-                  />
-                </div>
-                <div class="product-name text-gray-700 font-bold mt-2 text-sm">
-                  Nintendo Switch(2019)
-                </div>
-                <div class="product-make text-green-700 font-bold my-1">
-                  Nintendo
-                </div>
-                <div class="product-rating text-yellow-300">⭐⭐⭐⭐⭐ 4.5</div>
-                <div class="product-price font-bold text-gray-700 text-lg">
-                  $290.00
-                </div>
-              </div>
-              <div class="main-product flex flex-col items-center">
-                <div
-                  class="product-image w-48 h-52 bg-white rounded-lg p-4 ml-5"
-                >
-                  <img
-                    class="w-full h-full object-contain"
-                    src="https://www.tehnomedia.rs/image/71889.jpg?tip=huge&tip_slike=0"
-                    alt="iPhone 12 Pro Max"
-                  />
-                </div>
-                <div class="product-name text-gray-700 font-bold mt-2 text-sm">
-                  iPhone 12 Pro Max
-                </div>
-                <div class="product-make text-green-700 font-bold my-1">
-                  Apple
-                </div>
-                <div class="product-rating text-yellow-300">⭐⭐⭐⭐⭐ 3.9</div>
-                <div class="product-price font-bold text-gray-700 text-lg">
-                  $1199.00
-                </div>
-              </div>
-              <div class="main-product flex flex-col items-center">
-                <div
-                  class="product-image w-48 h-52 bg-white rounded-lg p-4 ml-5"
-                >
-                  <img
-                    class="w-full h-full object-contain"
-                    src="https://gamecentarrs.b-cdn.net/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/2/8/28348-sony-playstation-5-ps5-digital-edition-konzola-cena-prodaja-2.jpg"
-                    alt="PlayStation 5 Digital Edition"
-                  />
-                </div>
-                <div class="product-name text-gray-700 font-bold mt-2 text-sm">
-                  PlayStation 5 Digital Edition
-                </div>
-                <div class="product-make text-green-700 font-bold my-1">
-                  Sony
-                </div>
-                <div class="product-rating text-yellow-300">⭐⭐⭐⭐⭐ 4.0</div>
-                <div class="product-price font-bold text-gray-700 text-lg">
-                  $590.00
-                </div>
-              </div>
-              <div class="main-product flex flex-col items-center">
-                <div
-                  class="product-image w-48 h-52 bg-white rounded-lg p-4 ml-5"
-                >
-                  <img
-                    class="w-full h-full object-contain"
-                    src="https://www.sony.rs/image/245d2a7d4f811bd4c4750d2cc7558c5e?fmt=pjpeg&wid=330&bgcolor=FFFFFF&bgc=FFFFFF"
-                    alt="A7"
-                  />
-                </div>
-                <div class="product-name text-gray-700 font-bold mt-2 text-sm">
-                  A7
-                </div>
-                <div class="product-make text-green-700 font-bold my-1">
-                  Sony
-                </div>
-                <div class="product-rating text-yellow-300">⭐⭐⭐⭐⭐ 5.0</div>
-                <div class="product-price font-bold text-gray-700 text-lg">
-                  $1941.00
-                </div>
-              </div>
-              <div class="main-product flex flex-col items-center">
-                <div
-                  class="product-image w-48 h-52 bg-white rounded-lg p-4 ml-5"
-                >
-                  <img
-                    class="w-full h-full object-contain"
-                    src="https://www.tehnomedia.rs/image/67395.jpg?tip=huge&tip_slike=0"
-                    alt="MagicBook 14 8/256"
-                  />
-                </div>
-                <div class="product-name text-gray-700 font-bold mt-2 text-sm">
-                  MagicBook 14 8/256
-                </div>
-                <div class="product-make text-green-700 font-bold my-1">
-                  Honor
-                </div>
-                <div class="product-rating text-yellow-300">⭐⭐⭐⭐⭐ 5.0</div>
-                <div class="product-price font-bold text-gray-700 text-lg">
-                  $650.00
-                </div>
-              </div>
+            <div class="main-section-products flex">
+              <!-- ! SCRIPT.JS SENDS CONTENT HERE  -->  
+            </div>
             </div>
           </div>
         </div>
